# notification-adapter

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  tests.yml
gmail/: api.py  email_service.py  emailservice.py
src/: api.py
src/gmail/: email_service.py
tests/: conftest.py  test_api.py  test_gmail.py
tests/gmail/: test_gmail.py
